dartagnan/src/test/resources/spirv-clang/sourcelocation_tests/races/fail/write_write/elem_width_16.spv.dis
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 20
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
               OpCapability Int16
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %11 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %12 FuncParamAttr NoCapture
               OpDecorate %13 FuncParamAttr NoCapture
               OpDecorate %12 FuncParamAttr NoWrite
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %ushort = OpTypeInt 16 0
     %uint_3 = OpConstant %uint 3
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_CrossWorkgroup_uint = OpTypePointer CrossWorkgroup %uint
%_ptr_CrossWorkgroup_ushort = OpTypePointer CrossWorkgroup %ushort
         %10 = OpTypeFunction %void %_ptr_CrossWorkgroup_uint %_ptr_CrossWorkgroup_ushort
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
         %11 = OpFunction %void None %10
         %12 = OpFunctionParameter %_ptr_CrossWorkgroup_uint
         %13 = OpFunctionParameter %_ptr_CrossWorkgroup_ushort
         %14 = OpLabel
         %15 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %16 = OpCompositeExtract %uint %15 0
         %17 = OpUConvert %ushort %16
         %19 = OpInBoundsPtrAccessChain %_ptr_CrossWorkgroup_ushort %13 %uint_3
               OpStore %19 %17 Aligned 2
               OpReturn
               OpFunctionEnd
